vertical spacing on contact page fixed

--- a/_assets/stylesheets/icons.styl
+++ b/_assets/stylesheets/icons.styl
@@ -15,8 +15,10 @@ clear-grey-scale()
     -o-filter grayscale(0)
 
 
+.contact-page-text p
+    margin-top .5em
 .icons-wrapper
-    margin-top 20px
+    margin-top .7em
     text-align center
 
 .icons-list
